fixed alignment on user quizzes page

--- a/frontend/src/app/component/dataitem/quiz/index.css
+++ b/frontend/src/app/component/dataitem/quiz/index.css
@@ -21,7 +21,7 @@
 }
 
 .quizCardWrappingContainer {
-    width: 600px;
+    width: 280px;
     margin-bottom: 13px;
     margin-right: 13px;
 }
